--- a/src/components/MappingList.module.scss
+++ b/src/components/MappingList.module.scss
@@ -21,7 +21,7 @@
     background: none;
     border: none;
     cursor: pointer;
-    color: $primary-color;
+    color: $primary-color !important;
     font-size: 0.7rem;
     text-decoration: underline;
 }
