--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -51,7 +51,33 @@
 }
 
 .mappingTitle {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     font-weight: 600;
     color: $text-color;
+}
+
+.icon {
+    height: 48px;
+    width: 48px;
+    object-fit: contain;
+    margin-right: 8px;
+}
+
+.addMappingButton {
+    width: 100%;
+    padding: 10px 5px;
+    margin-bottom: 1rem !important;
+    cursor: pointer;
+    background-color: $card-background;
+    border-radius: 12px;
+    margin-bottom: 1rem !important;
+    box-shadow: 0 2px 10px $shadow-light;
+    overflow: hidden;
+    transition: box-shadow 0.2s ease;
+    width: 100%;
+    border: none !important;
+
+    &:hover {
+        box-shadow: 0 4px 15px $shadow-medium;
+    }
 }
