--- a/src/components/MappingList.module.scss
+++ b/src/components/MappingList.module.scss
@@ -1,9 +1,10 @@
 @use "../styles/base/variables" as *;
 
 .mappingListContainer {
-    border-radius: 12px;
-    box-shadow: 4px 4px 20px $shadow-light;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .createButton {
@@ -17,6 +18,18 @@
     transition: background-color 0.2s ease, color 0.2s ease;
 }
 
+.createButton:hover {
+    background-color: $primary-color;
+    color: #fff;
+}
+
+.createButton:disabled {
+    background-color: $border-color;
+    color: $text-color;
+    border-color: $border-color;
+    cursor: not-allowed;
+}
+
 .loadCommentButton {
     background: none;
     border: none;
@@ -26,9 +39,10 @@
     text-decoration: underline;
 }
 
-.create-button:hover {
-    background-color: $primary-color;
-    color: #fff;
+.selectedPatternDetails {
+    display: flex;
+    gap: 8px;
+    align-items: center;
 }
 
 .linkedTitle {
@@ -44,6 +58,30 @@
 
         &:hover {
             color: $secondary-color;
+        }
+    }
+}
+
+.creationList {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+    overflow: scroll;
+
+    li {
+        background-color: #fff;
+        border: 1px solid $border-color;
+        border-radius: 8px;
+        padding: 8px;
+        cursor: pointer;
+        transition: box-shadow 0.2s ease, transform 0.2s ease;
+        margin: 8px 0px;
+        z-index: 10;
+
+        &:hover {
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
+            transform: translateY(-2px);
         }
     }
 }
