structure fixes, stylings

--- a/src/components/MappingList.module.scss
+++ b/src/components/MappingList.module.scss
@@ -7,6 +7,19 @@
     flex-direction: column;
 }
 
+.sectionTitle {
+    margin-bottom: 1rem;
+}
+
+.mappingListTitle {
+    margin-bottom: 1rem;
+}
+
+.commentsTitle {
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+}
+
 .createButton {
     background-color: #fff;
     color: $primary-color;
