--- a/src/components/MappingList.module.scss
+++ b/src/components/MappingList.module.scss
@@ -185,6 +185,20 @@
     box-shadow: 0 1px 5px $shadow-light;
 }
 
+.errorNote {
+    padding: 1rem;
+    background: #fff3cd;
+    border: 1px solid #ffc107;
+    border-radius: 8px;
+    color: #856404;
+    font-size: 0.9rem;
+    margin-top: 1rem;
+
+    p {
+        margin: 0;
+    }
+}
+
 .submitButton {
     background-color: #e9e9e9;
     color: $text-color;
